# tree-sitter-gemtext

./: .gitignore  Cargo.toml  LICENSE  README.md  grammar.js  package.json  tree-sitter.json
.github/workflows/: rust.yml
bindings/rust/: build.rs  lib.rs  token_types.rs
src/: .clangd  grammar.json  node-types.json  parser.c  scanner.c
