[package]
name = "tree-sitter-gemtext"
description = "A parser for gemtext"
version = "0.1.0"
authors = ["room2 <lukai@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gemtext"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/trislu/tree-sitter-gemtext"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26"
tree-sitter-cli = "0.26"

[features]
dev = []
