[package]
name = "tree-sitter-gemtext"
description = "A parser for gemtext"
version = "0.1.1"
authors = ["room2 <lukai@mail.ustc.edu.cn>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "gemtext"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/trislu/tree-sitter-gemtext"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"
tree-sitter = "0.26"
strum = "0.28"
strum_macros = "0.28"

[build-dependencies]
cc = "1.2"
codegen = "0.3"
convert_case = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tree-sitter-cli = "0.26"

[features]
dev = []
